--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,11 +29,41 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:text="@string/nid_app_demo_session_id"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/textViewSessionId"
+            app:layout_constraintBottom_toTopOf="@id/textViewSessionId"/>
+
+        <TextView
+            android:id="@+id/textViewSessionId"
+            android:background="@drawable/nid_round_rectangle"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="14dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:gravity="center_vertical"
+            tools:text="216367512753"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:enabled="true"
+            android:textIsSelectable="true"
+            android:focusable="true"
+            android:longClickable="true" />
+
         <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/textViewSessionId"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
